# da4ml_emu

./: README.md  pyproject.toml
src/da4ml_emu/: __init__.py  parser.py
src/da4ml_emu/layers/: __init__.py  _base.py  core.py
